--- a/src/Nav.css
+++ b/src/Nav.css
@@ -4,6 +4,7 @@
   display: flex;
   width: 100%;
   justify-content: space-between;
+  align-items: center;
   padding: 10px;
   height: 70px;
   z-index: 1;
